# bazel-go-monorepo

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  go.mod  go.sum
apps/auth/: BUILD.bazel  Dockerfile  main.go  module.go
apps/auth/internal/account/delivery/http/: BUILD.bazel  auth_handler.go  auth_router.go
apps/auth/internal/account/domain/: account.go  model.go
apps/auth/internal/account/dto/: BUILD.bazel
apps/auth/internal/account/repository/: account_repository.go  auth_provider_repository.go  base.go  password_version_repository.go
apps/auth/internal/account/usecase/: auth_usecase.go
apps/auth/internal/user/delivery/http/: auth_handler.go
apps/auth/internal/user/domain/: BUILD.bazel  account.go
apps/auth/internal/user/dto/: auth_dto.go
apps/auth/internal/user/repository/: BUILD.bazel  account_repository.go  auth_provider_repository.go  password_version_repository.go
apps/auth/internal/user/usecase/: BUILD.bazel  auth_usecase.go
libs/config/: BUILD.bazel  config.go
libs/consul/: BUILD.bazel  consul.go
libs/database/: BUILD.bazel  db.go
libs/errors/: BUILD.bazel  errors.go
libs/httpserver/: BUILD.bazel  server.go
libs/logger/: BUILD.bazel  logger.go
libs/messaging/: BUILD.bazel  consumer.go  producer.go
libs/middleware/: BUILD.bazel  csrf.go  middleware.go  otel.go  ratelimit.go  session.go
libs/otelcol/: BUILD.bazel  otelcol.go
libs/pagination/: BUILD.bazel
libs/pprof/: BUILD.bazel
libs/profiling/: BUILD.bazel  profilling.go
libs/rand/: BUILD.bazel
libs/redis/: BUILD.bazel
libs/response/: BUILD.bazel
libs/security/: BUILD.bazel  hash.go
libs/validator/: BUILD.bazel
migrations/: 20250330134906_create_type_accounts.down.sql  20250330134906_create_type_accounts.up.sql  20250330162312_create_table_password_version.down.sql  20250330162312_create_table_password_version.up.sql  20250330162316_create_table_password_rule.down.sql  20250330162316_create_table_password_rule.up.sql  20250330162323_create_table_accounts.down.sql  20250330162323_create_table_accounts.up.sql  20250330184214_create_table_auth_providers.down.sql  20250330184214_create_table_auth_providers.up.sql  20250330184432_create_alter_table_accounts_ref_auth_providers.down.sql  20250330184432_create_alter_table_accounts_ref_auth_providers.up.sql
