load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "httpserver",
    srcs = ["server.go"],
    importpath = "github.com/saas-flow/monorepo/libs/httpserver",
    visibility = ["//visibility:public"],
    deps = [
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)
