load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "csrf.go",
        "middleware.go",
        "otel.go",
        "session.go",
    ],
    importpath = "github.com/saas-flow/monorepo/libs/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/response",
        "@com_github_gin_contrib_sessions//:sessions",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_playground_universal_translator//:universal-translator",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_google_uuid//:uuid",
        "@com_github_redis_go_redis_v9//:go-redis",
        "@com_github_saas_flow_shared_libs//errors",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
        "@org_uber_go_zap//zapcore",
    ],
)
