load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "otelcol",
    srcs = ["otelcol.go"],
    importpath = "github.com/saas-flow/monorepo/libs/otelcol",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grafana_otel_profiling_go//:otel-profiling-go",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//propagation",
        "@io_opentelemetry_go_otel//semconv/v1.17.0:v1_17_0",
        "@io_opentelemetry_go_otel_exporters_otlp_otlpmetric_otlpmetrichttp//:otlpmetrichttp",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace//:otlptrace",
        "@io_opentelemetry_go_otel_exporters_otlp_otlptrace_otlptracehttp//:otlptracehttp",
        "@io_opentelemetry_go_otel_sdk//resource",
        "@io_opentelemetry_go_otel_sdk//trace",
        "@io_opentelemetry_go_otel_sdk_metric//:metric",
        "@org_uber_go_fx//:fx",
        "@org_uber_go_zap//:zap",
    ],
)
