load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "validator",
    srcs = ["validator.go"],
    importpath = "github.com/saas-flow/monorepo/libs/validator",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_go_playground_locales//en",
        "@com_github_go_playground_universal_translator//:universal-translator",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_go_playground_validator_v10//translations/en",
        "@org_uber_go_fx//:fx",
    ],
)
