load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "account.go",
        "model.go",
    ],
    importpath = "github.com/saas-flow/monorepo/apps/auth/internal/user/domain",
    visibility = ["//apps/auth:__subpackages__"],
    deps = [
        "//apps/auth/internal/user/dto",
        "//libs/pagination",
        "//libs/security",
        "@io_gorm_gorm//:gorm",
    ],
)
